--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
             { id: "d4", group: "daily", title: "精鋭討伐チェスト", note: "鍵は最大6まで所持可" },
             { id: "d5", group: "daily", title: "ボス討伐チェスト", note: "鍵は最大6まで所持可" },
             { id: "d6", group: "daily", title: "フォーカス消化", note: "フォーカス上限 2,000 まで保持" },
+            { id: "d7", group: "daily", title: "友好度", note: "日最大200" },
             { id: "d7", group: "daily", title: "ホーム依頼", note: "最大9件まで持ち越し可" },
             { id: "d8", group: "daily", title: "ワールドレイド", note: "3日クリアで完了" },
             { id: "d9", group: "daily", title: "ギルドチェックイン", note: "管理人に話しかけて即完了" },
