--- a/index.html
+++ b/index.html
@@ -260,30 +260,30 @@
             { id: "d5", group: "daily", title: "ボス討伐チェスト", note: "鍵は最大6まで所持可" },
             { id: "d6", group: "daily", title: "フォーカス消化", note: "フォーカス上限 2,000 まで保持" },
             { id: "d7", group: "daily", title: "友好度", note: "日最大200" },
-            { id: "d7", group: "daily", title: "ホーム依頼", note: "最大9件まで持ち越し可" },
-            { id: "d8", group: "daily", title: "ワールドレイド", note: "3日クリアで完了" },
-            { id: "d9", group: "daily", title: "ギルドチェックイン", note: "管理人に話しかけて即完了" },
-            { id: "d10", group: "daily", title: "ギルド納品", note: "ギルド活動用デイリー" },
-            { id: "d11", group: "daily", title: "ギルドハント", note: "金・土・日 10:00 ~ 24:00" },
-            { id: "d12", group: "daily", title: "神秘ストア購入", note: "必要なものだけ購入。パス購入者は1回リフレッシュ可" },
-            { id: "w13", group: "weekly", title: "生活スキル週クエ", note: "各スキルの週依頼" },
-            { id: "w14", group: "weekly", title: "ワールドレイド（1,200活動P）", note: "週次ポイント目標" },
-            { id: "w15", group: "weekly", title: "友情ポイント支援", note: "フレンド支援でポイント獲得上限1,000" },
-            { id: "d16", group: "weekly", title: "カジュアル友情ポイント", note: "日ごと初回イベントの報酬UP上限1,000" },
-            { id: "w17", group: "weekly", title: "ギルドダンス", note: "金 19:30 ~ 19:55" },
-            { id: "w18", group: "weekly", title: "ギルド活動報酬", note: "週報酬の受取" },
-            { id: "w19", group: "weekly", title: "ID改鋳石", note: "最大20週分" },
-            { id: "w20", group: "weekly", title: "厄災の主", note: "週5回上限" },
-            { id: "w21", group: "weekly", title: "開拓者報酬", note: "9個の依頼で達成" },
-            { id: "w22", group: "weekly", title: "竜レイド", note: "週1報酬上限" },
-            { id: "w23", group: "weekly", title: "レグディニス遺跡", note: "2週間に1回" },
-            { id: "s24", group: "store", title: "シーズンパスショップ", note: "エンブレム素材、ルーノ袋など" },
-            { id: "s25", group: "store", title: "オーブショップ", note: "週購入上限あり" },
-            { id: "s26", group: "store", title: "友情ショップ", note: "友情ポイント消費" },
-            { id: "s27", group: "store", title: "名誉ストア", note: "必要なものだけ購入" },
-            { id: "s28", group: "store", title: "GCショップ", note: "週10,000獲得上限" },
-            { id: "s29", group: "store", title: "ギルドショップ", note: "ギルド専用通貨" },
-            { id: "s30", group: "store", title: "装備交換所", note: "紫交換" }
+            { id: "d8", group: "daily", title: "ホーム依頼", note: "最大9件まで持ち越し可" },
+            { id: "d9", group: "daily", title: "ワールドレイド", note: "3日クリアで完了" },
+            { id: "d10", group: "daily", title: "ギルドチェックイン", note: "管理人に話しかけて即完了" },
+            { id: "d11", group: "daily", title: "ギルド納品", note: "ギルド活動用デイリー" },
+            { id: "d12", group: "daily", title: "ギルドハント", note: "金・土・日 10:00 ~ 24:00" },
+            { id: "d13", group: "daily", title: "神秘ストア購入", note: "必要なものだけ購入。パス購入者は1回リフレッシュ可" },
+            { id: "w14", group: "weekly", title: "生活スキル週クエ", note: "各スキルの週依頼" },
+            { id: "w15", group: "weekly", title: "ワールドレイド（1,200活動P）", note: "週次ポイント目標" },
+            { id: "w16", group: "weekly", title: "友情ポイント支援", note: "フレンド支援でポイント獲得上限1,000" },
+            { id: "w17", group: "weekly", title: "カジュアル友情ポイント", note: "日ごと初回イベントの報酬UP上限1,000" },
+            { id: "w18", group: "weekly", title: "ギルドダンス", note: "金 19:30 ~ 19:55" },
+            { id: "w19", group: "weekly", title: "ギルド活動報酬", note: "週報酬の受取" },
+            { id: "w20", group: "weekly", title: "ID改鋳石", note: "最大20週分" },
+            { id: "w21", group: "weekly", title: "厄災の主", note: "週5回上限" },
+            { id: "w22", group: "weekly", title: "開拓者報酬", note: "9個の依頼で達成" },
+            { id: "w23", group: "weekly", title: "竜レイド", note: "週1報酬上限" },
+            { id: "w24", group: "weekly", title: "レグディニス遺跡", note: "2週間に1回" },
+            { id: "s25", group: "store", title: "シーズンパスショップ", note: "エンブレム素材、ルーノ袋など" },
+            { id: "s26", group: "store", title: "オーブショップ", note: "週購入上限あり" },
+            { id: "s27", group: "store", title: "友情ショップ", note: "友情ポイント消費" },
+            { id: "s28", group: "store", title: "名誉ストア", note: "必要なものだけ購入" },
+            { id: "s29", group: "store", title: "GCショップ", note: "週10,000獲得上限" },
+            { id: "s30", group: "store", title: "ギルドショップ", note: "ギルド専用通貨" },
+            { id: "s31", group: "store", title: "装備交換所", note: "紫交換" }
         ];
 
         const state = loadState();
